Update history API
